[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sculpt3d"
version = "0.1.0"
description = "Free CLI for image→3D and text→3D via Hugging Face Spaces. Zero GPU, zero cost, zero accounts."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Kushagar Garg", email = "kushagar@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "gradio_client>=1.0",
    "httpx>=0.27",
    "pydantic>=2.8",
    "tenacity>=8.2",
    "aiofiles>=23.0",
    "platformdirs>=4.2",
    "tomli-w>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit>=3.7",
]

[project.urls]
Homepage = "https://github.com/Dreamstick9/sculpt-cli"
Repository = "https://github.com/Dreamstick9/sculpt-cli"
Issues = "https://github.com/Dreamstick9/sculpt-cli/issues"

[project.scripts]
sculpt = "sculpt.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sculpt*"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W", "UP", "C90"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.pre-commit]
hooks = [
    {id = "ruff", stages = ["commit"]},
    {id = "mypy", stages = ["commit"]},
    {id = "pytest", stages = ["push"]},
]